--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
             <div class="social-container">
                 <li class="social">
                     <ul>
-                        Facebook
-                    </ul>
-                    <ul>
-                        Instagram
+                        <a href="https://www.facebook.com/profile.php?id=100037105613669">Facebook</a
+              >
+            </ul>
+            <ul>
+              <a href="https://www.instagram.com/aeyu_45/">Instagram</a>
                     </ul>
                     <ul>
                         Twitter
